<resources>
  <string name="app_name">Hillfort</string>
  <string name="hint_hillfortTitle">Hillfort Title:</string>
  <string name="hint_hillfortDescription">Description:</string>
  <string name="hint_hillfortNotes">Notes: </string>
  <string name="button_addHillfort">Add Hillfort</string>
  <string name="menu_addHillfort">Add</string>
  <string name="menu_cancelHillfort">Cancel</string>
  <string name="menu_deleteHillfort">Delete</string>
  <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
  <string name="save_hillfort"> Save Hillfort </string>
  <string name="button_addImage"> Add Image </string>
  <string name="select_hillfort_image">Select hillfort image</string>
  <string name="change_hillfort_image">Change hillfort image</string>
  <string name="button_location">Set Location</string>
  <string name="title_activity_maps">Map</string>
  <string name="loader_text">Welcome</string>
  <string name="visited">visited</string>
  <string name="descriptionHfImage">Hillfort Image</string>
  <string name="hint_date_visited">Date</string>
  <string name="enter_date_visited">Please enter date visited</string>
  <string name="hillfort_delete">Hillfort deleted successfully</string>
  <string name="user_settings">settings</string>
  <string name="menu_logout">logout</string>
  <string name="login_fail">Login Unsuccessful</string>
  <string name="registration_success">Successfully Registered</string>
  <string name="login_prompt">You may now login</string>
  <string name="login_success">Login Successful</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="hillforts_visited">Hillforts Visited</string>
  <string name="total_hillforts">Total Hillforts</string>
  <string name="user_settings_title">Current User:</string>
  <string name="user_logged_out">Logout Successful</string>
  <string name="email_string">Email: </string>
  <string name="password_string">Password: </string>
  <string name="no_visited_sites">No of visited sites: </string>
  <string name="no_listed_sites">No of listed sites: </string>
  <string name="blank_input_warning">Username &amp; Password not complete</string>
  <string name="already_registered_warning">Username already registered</string>
  <string name="menu_mapView">Map View</string>
  <string name="title_activity_hillfort_maps">Map of all Hillforts</string>
</resources>

