<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="org.wit.hillfort.activities.SettingsActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.design.widget.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorAccent"
      android:fitsSystemWindows="true"
      app:elevation="0dip"
      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorPrimary" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/appBarLayout"
      android:layout_marginTop="0dp"
      android:fillViewport="true">

      <LinearLayout
        android:id="@+id/toolbarSettingsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
          android:id="@+id/user_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/email"
          android:textSize="17dp"
          tools:padding="11dp" />

        <TextView
          android:id="@+id/user_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/password"
          android:textSize="17dp"
          tools:padding="11dp" />

        <TextView
          android:id="@+id/visited_hillforts"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/hillforts_visited"
          android:textSize="17dp"
          tools:padding="11dp" />

        <TextView
          android:id="@+id/total_hillforts"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/total_hillforts"
          android:textSize="17dp"
          tools:padding="11dp" />
      </LinearLayout>
    </ScrollView>

  </RelativeLayout>
</android.support.constraint.ConstraintLayout>
